2010-04-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed, minor build fix.

        Change the order of the member initialisation list
        in constructor to match declaration order

        * runtime/Collector.cpp:
        (JSC::Heap::Heap):

2010-04-01  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Dmitry Titov.

        Add FileThread for async file operation support in FileReader and FileWriter
        https://bugs.webkit.org/show_bug.cgi?id=36896

        Add ENABLE_FILE_READER and ENABLE_FILE_WRITER flags.

        * Configurations/FeatureDefines.xcconfig:

2010-03-31  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (windows build fix pt II).

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-03-31  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (windows build fix).

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-03-31  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Geoff Garen.

        Bug 36871 - Remove JSC::CString
        Use WTF::CString instead (which until recently was WebCore::CString).

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * runtime/UString.cpp:
        * runtime/UString.h:

2010-03-31  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed, fix after r56842.

        Add UNUSED_PARAM a to silence warning.

        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):

2010-03-31  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed, Symbian build fix.

        Refactor JITStubs.cpp so that the list of STUB_FUNCTIONs
        are not dependent on the JSVALUE32_64 guard.

        * jit/JITStubs.cpp: Place the JSVALUE32_64 guard inside 
        the body of cti_op_eq_strings.
        * jit/JITStubs.h: Remove JSVALUE32_64 guard from 
        cti_op_eq_strings stub.

2010-03-30  Gavin Barraclough  <barraclough@apple.com>
