@@ -1,3 +1,13 @@
+2010-04-02  Jeremy Moskovich  <jeremy@chromium.org>
+
+        Reviewed by Geoffrey Garen.
+
+        Beef up documentation for ASSERT* and CRASH macros a bit.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36527
+
+        * wtf/Assertions.h:
+
 2010-04-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
 
         Unreviewed, minor build fix.
